Fix: Resolve build errors in knowledge-base API and disable Sentry CLI during local build

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "scripts": {
     "dev": "pnpm run next-dev",
     "next-dev": "next dev",
-    "build": "bash scripts/check-required-envs.sh && prisma generate && pnpm lint && next build",
-    "build:skip-env": "SKIP_ENV_VALIDATION=true bash scripts/check-required-envs.sh && prisma generate && next build",
+    "build": "bash scripts/check-required-envs.sh && prisma generate && pnpm lint && SENTRY_CLI_ENABLED=false next build",
+    "build:skip-env": "SKIP_ENV_VALIDATION=true bash scripts/check-required-envs.sh && prisma generate && SENTRY_CLI_ENABLED=false next build",
     "typecheck": "prisma generate && tsc --noEmit -p tsconfig.build.json",
     "lint:semgrep": "semgrep --config semgrep/edge-node-imports.yml || true",
-    "start": "next build && next start",
+    "start": "SENTRY_CLI_ENABLED=false next build && next start",
     "lint": "eslint . --ext .js,.ts,.tsx --fix",
     "test": "vitest --run",
     "prebuild": "pnpm test:thresholds",
